--- a/staticfiles/explorer/index.html
+++ b/staticfiles/explorer/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/OWExplorer.loader.js";
       var config = {
-        dataUrl: buildUrl + "/OWExplorer.data.gz",
-        frameworkUrl: buildUrl + "/OWExplorer.framework.js.gz",
-        codeUrl: buildUrl + "/OWExplorer.wasm.gz",
+        dataUrl: buildUrl + "/OWExplorer.data",
+        frameworkUrl: buildUrl + "/OWExplorer.framework.js",
+        codeUrl: buildUrl + "/OWExplorer.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "OnlyWorlds",
         productName: "Explorer",
